raffia/tests/error/value/bad-string.snap
---
source: raffia/tests/error.rs
---
error: unterminated string
  ┌─ bad-string.css:2:12
  │
2 │   content: "
  │            ^


